--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "homepage": "https://github.com/Michael-saeek/testing-puppeter-webscrapping#readme",
   "dependencies": {
+    "axios": "^0.26.1",
+    "cors": "^2.8.5",
     "express": "^4.17.3",
     "morgan": "^1.10.0",
     "puppeteer": "^13.5.1"
