--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "morgan": "^1.10.0",
-    "puppeteer": "^14.1.0"
+    "puppeteer": "^14.1.0",
+    "puppeteer-cluster": "^0.23.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
